--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@ layout: compress
     {% include scripts.html %}
     <div style="position: relative; left: -150px;">
 <!--     <div style="text-align: left;"> -->
-      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=422&t=m&d=v4u8uN8OXhQBYTRvevZRYD3LtxaVx_pAZ4OguzT0k58&cl=ffffff&w=a'></script>
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=422&t=m&d=v4u8uN8OXhQBYTRvevZRYD3LtxaVx_pAZ4OguzT0k58'></script>
     </div>
 
   </body>
